fix z-index on nav

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 100vw;
   background-color: $white;
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   top: 0;
   left: 0;
